syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "ru.sentidas.rangiffler.grpc";
option java_outer_classname = "RangifflerUserdataProto";

service RangifflerUserdataService {
  rpc CurrentUser (UsernameRequest) returns (UserResponse) {}
  rpc CurrentUserById (UserIdRequest) returns (UserResponse) {}
  rpc AllUsersPage (UserPageRequest) returns (UsersPageResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse) {}
  rpc AllFriendsPage (UserPageRequest) returns (UsersPageResponse) {}
  rpc FriendsId (UserIdRequest) returns (UserIdsResponse) {}
  rpc RemoveFriend (FriendshipRequest) returns (google.protobuf.Empty) {}
  rpc IncomeInvitations (UserPageRequest) returns (UsersPageResponse) {}
  rpc OutcomeInvitations (UserPageRequest) returns (UsersPageResponse) {}
  rpc CreateFriendshipRequest (FriendshipRequest) returns (UserResponse) {}
  rpc AcceptFriendshipRequest (FriendshipRequest) returns (UserResponse) {}
  rpc DeclineFriendshipRequest (FriendshipRequest) returns (UserResponse) {}
}

message UserResponse {
  string id = 1;
  string username = 2;
  optional string firstname = 3;
  optional string surname = 4;
  optional string avatar = 5;
  optional string avatar_small = 6;
  optional FriendStatus friend_status = 7;
  repeated UserResponse friends = 8;
  repeated UserResponse income_invitations = 9;
  repeated UserResponse outcome_invitations = 10;
  string country_code = 11;
}

message UserIdsResponse {
  repeated string user_ids = 1;
}

message UsersPageResponse {
  int64 total_elements = 1;
  int32 total_pages = 2;
  bool first = 3;
  bool last = 4;
  int32 page = 5;
  int32 size = 6;
  repeated UserResponse content = 7;
}

message UsernameRequest {
  string username = 1;
}

message UserIdRequest {
  string user_id = 1;
}

message UserSearchRequest {
  string username = 1;
  optional string search_query = 2;
}

message UserRequest {
  string id = 1;
  string username = 2;
  string firstname = 3;
  string surname = 4;
  string avatar = 5;
  FriendStatus friend_status = 6;
  string country_code = 7;
}
message UpdateUserRequest {
  string username = 1;
  optional string firstname = 2;
  optional string surname = 3;
  optional string avatar = 4;
  optional string country_code = 5;
}

message UserPageRequest {
  string username = 1;
  int32 page = 2;
  int32 size = 3;
  optional string search_query = 4;
}

message FriendshipRequest {
  string username = 1;
  string user = 2;
}

enum FriendStatus {
  UNDEFINED = 0;
  INVITATION_SENT = 1;
  INVITATION_RECEIVED = 2;
  FRIEND = 3;

}

enum FriendshipAction {
  UNSPECIFIED = 0;
  ADD = 1;
  ACCEPT = 2;
  REJECT = 3;
  DELETE = 4;
}

